# VoidHackJune26

./: .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  run_attack.py  tools.py
agent-defender-js/: README.md  package-lock.json  package.json
agent-defender-js/lib/: client.js  index.js  langchain.js  policy.js  providers.js  rules.js
agent-defender-js/templates/: policy.yaml
agent-firewall-js/: README.md  package-lock.json  package.json
agent-firewall-js/lib/: client.js  index.js  langchain.js  pii.js  policy.js
agent-firewall-js/templates/: policy.yaml
agent/poisoned/: invoice.txt
agent_defender/: __init__.py  policy.py  providers.py
dashboard/: .gitignore  biome.json  package-lock.json  package.json  playwright.config.ts
dashboard/app/: globals.css  layout.tsx
dashboard/components/: Controls.tsx  Dashboard.tsx  EventCard.tsx  Header.tsx  ModeToggle.tsx  PolicyPanel.tsx  StatusLine.tsx
dashboard/lib/: api.ts  mission.ts  types.ts  useEvents.ts
dashboard/tests/: dashboard.spec.ts
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DESIGN.md  RESEARCH.md  RUNBOOK.md  SDK_INTEGRATION.md
docs/demo/: dashboard-demo-long.webm  (+1 more)
policies/: policy.yaml
proxy/: pyproject.toml  requirements.txt
proxy/app/: __init__.py  config.py  demo.py  engine.py  events.py  groq_client.py  ingest.py  main.py  mission.py  policy.py  receipts.py  schemas.py  store.py
proxy/app/detect/: __init__.py  cost.py  injection.py  judge.py  pii.py  rules.py
proxy/tests/: conftest.py  test_api.py  test_cost.py  test_engine.py  test_ingest.py  test_injection.py  test_pii.py  test_receipts.py  test_rules.py  test_sdk_providers.py
samples/: make_samples.py  sdk_demo.py
voidhack_agent_defender/: client.py  providers.py
voidhack_agent_firewall/: __init__.py  client.py  langchain.py  pii.py  policy.py  providers.py  rules.py  schemas.py
(+14 files in other folders)
