[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voidhack-agent-firewall"
version = "1.0.0"
description = "Provider-agnostic action firewall SDK for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "VoidHack Agent Firewall" }
]
keywords = [
  "ai",
  "agents",
  "firewall",
  "guardrails",
  "prompt-injection",
  "langchain",
  "openai",
  "anthropic",
  "gemini",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.24"]
gemini = ["google-generativeai>=0.8"]
langchain = ["langchain-core>=0.2"]
all = [
  "openai>=1.0",
  "anthropic>=0.24",
  "google-generativeai>=0.8",
  "langchain-core>=0.2",
]
dev = [
  "pytest>=8.3",
]

[project.urls]
Homepage = "https://github.com/Dinaltium/VoidHackJune26"
Repository = "https://github.com/Dinaltium/VoidHackJune26"

[tool.setuptools.packages.find]
include = ["voidhack_agent_firewall*"]
